syntax = "proto3";

package chat;

option go_package = "github.com/as283-ua/yappa/api/gen/client";

message ChatMessage {
    string msg = 1;
    bytes msgSignature = 2;
}

message KeyRotation {
	bytes keyExchangeData = 1;
    bytes signedKeyExchange = 2;
}

message ClientEvent {
    uint64 serial = 1;
    uint64 timestamp = 2;
    string sender = 3;
    oneof payload {
        ChatMessage message = 4;
        KeyRotation keyRotation = 5;
    }
}

message PeerData {
    string username = 1;
    bytes key_exchange = 2;
    bytes cert = 3;
}

message Chat {
    repeated ClientEvent events = 1;
    uint64 current_serial = 2;
    bytes key = 3;
    PeerData peer = 4;
}

message SaveState {
    repeated Chat chats = 1;
}
