syntax = "proto3";

package chat;

option go_package = "github.com/as283-ua/yappa/api/gen";

// registration messages
message RegistrationRequest {
    string user = 1;
}

message ConfirmRegistrationToken {
    string user = 1;
    bytes token = 2;
}

message ConfirmRegistration {
    string user = 1;
    bytes token = 2;
    bytes cert  = 3;
}

// chat message types
message SendMsg {
    string receiver = 1;
    bytes inboxId = 2;
    string message = 3;
}

message ChatInit {
    string username = 1;
    bytes inboxId = 2;
    bytes enc_key = 3;
}

message HeartBeat {}

message ClientMessage {
    oneof payload {
        SendMsg send = 1;
        ChatInit init = 2;
        HeartBeat hb = 3;
    }
}

message ReceiveMsg {
    bytes enc_data = 1;
}

message ServerMessage {
    oneof payload {
        SendMsg send = 1;
    }
}